@@ -1,5 +1,5 @@
 /*
- * $Id: thwchar.c,v 1.5 2001-09-13 17:54:29 thep Exp $
+ * $Id: thwchar.c,v 1.6 2001-09-14 13:48:41 thep Exp $
  * thwchar.c - wide char support for Thai
  * Created: 2001-07-27
  * Author:  Pattara Kiatisevi <ott@linux.thai.net>,
@@ -152,55 +152,58 @@ static int uni_eqer_(const void *uni1, const void *uni2)
     return (thwchar_t)uni1 == (thwchar_t)uni2 ? 1 : 0;
 }
 
-static void init_uni2local_map_(hash_table_t **pMap, thwchar_t rev_map[])
+static hash_table_t *init_uni2local_map_(thwchar_t rev_map[])
 {
+    hash_table_t *pMap = hash_table_new(uni_hasher_, uni_eqer_);
     thchar_t local_c;
-
-    *pMap = hash_table_new(uni_hasher_, uni_eqer_);
-    for (local_c = 0x80; local_c <= 0xff; ++local_c) {
-        hash_table_insert(*pMap, (void *)rev_map[local_c-0x80],
-                          (void *)local_c);
-    }
+    local_c = 0x80;
+    do {
+        /* insert only non-TIS chars */
+        if (!th_istis(local_c)) {
+            thwchar_t wc = rev_map[local_c-0x80];
+            if (wc != WC_ERR) {
+                hash_table_insert(pMap, (void *)wc, (void *)local_c);
+            }
+        }
+    } while (local_c++ <= 0xff);
+    return pMap;
 }
 
 static hash_table_t *uni_win_map_ = 0;
 static hash_table_t *uni_mac_map_ = 0;
 
-static void init_uni2local_maps_()
+static hash_table_t *get_uni2win_map_()
 {
-    init_uni2local_map_(&uni_win_map_, tis620_2_uni_map_);
-    init_uni2local_map_(&uni_mac_map_, tis620_1_uni_map_);
+    if (!uni_win_map_) {
+        uni_win_map_ = init_uni2local_map_(tis620_2_uni_map_);
+    }
+    return uni_win_map_;
 }
 
-static thchar_t uni2thai_(thwchar_t wc, const hash_table_t *unimap)
+static hash_table_t *get_uni2mac_map_()
 {
-    thchar_t *pthai;
-
-    if (wc < 0x0080) { 
-        /* BASIC_LATIN range */
-        return (thchar_t) wc ;
-    } else if (0x0e00 <= wc && wc <= 0x0e5f) {
-        /* THAI range */
-        thchar_t b = uni_tis620_0_map_[wc-0x0e00];
-        if (b != TH_ERR)  return b;
+    if (!uni_mac_map_) {
+        uni_mac_map_ = init_uni2local_map_(tis620_1_uni_map_);
     }
-    /* out of range */
-    pthai = (thchar_t *) hash_table_lookup(unimap, (void *)wc);
+    return uni_mac_map_;
+}
+
+static thchar_t uni2thai_ext_(thwchar_t wc, const hash_table_t *unimap)
+{
+    /* wc assumed out of range */
+    thchar_t *pthai = (thchar_t *) hash_table_lookup(unimap, (void *)wc);
     return pthai ? *pthai : TH_ERR;
 }
 
 thchar_t th_uni2winthai(thwchar_t wc)
 {
-    return uni2thai_(wc, uni_win_map_);
+    thchar_t c = th_uni2tis(wc);
+    return (c == TH_ERR) ? uni2thai_ext_(wc, get_uni2win_map_()) : c;
 }
 
 thchar_t th_uni2macthai(thwchar_t wc)
 {
-    return uni2thai_(wc, uni_mac_map_);
-}
-
-void th_init_thwchar()
-{
-    init_uni2local_maps_();
+    thchar_t c = th_uni2tis(wc);
+    return (c == TH_ERR) ? uni2thai_ext_(wc, get_uni2mac_map_()) : c;
 }
 
